test: add tests for API request monitoring