@@ -1,3 +1,8 @@
+/**
+ * Test suite for DuplicateBookService
+ * 
+ * @author William Callahan
+ */
 package com.williamcallahan.book_recommendation_engine.service;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -5,99 +10,196 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.when;
+import static org.mockito.ArgumentMatchers.eq; // Added import for eq
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 import org.mockito.junit.jupiter.MockitoExtension;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 import com.williamcallahan.book_recommendation_engine.model.Book;
-import com.williamcallahan.book_recommendation_engine.repository.BookRepository;
+import com.williamcallahan.book_recommendation_engine.model.CachedBook; // Added import
+import com.williamcallahan.book_recommendation_engine.repository.CachedBookRepository; // Changed from BookRepository
 
+/**
+ * Test class for DuplicateBookService
+ */
 @ExtendWith(MockitoExtension.class)
 public class DuplicateBookServiceTest {
 
+    /**
+     * Mock repository for database operations
+     */
     @Mock
-    private BookRepository bookRepository;
+    private CachedBookRepository cachedBookRepository; // Changed from BookRepository
 
+    /**
+     * Service instance under test
+     */
     @InjectMocks
     private DuplicateBookService duplicateBookService;
 
+    /**
+     * Setup test environment before each test
+     */
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
+        // MockitoAnnotations.openMocks(this); // Not strictly necessary with @ExtendWith
     }
 
-    @Test
-    void testFindDuplicateBooks_returnsEmptyList_whenRepositoryIsEmpty() {
-        when(bookRepository.findAll()).thenReturn(Collections.emptyList());
-
-        List<Book> duplicates = duplicateBookService.findDuplicateBooks();
-
-        assertNotNull(duplicates, "Duplicate list should not be null");
-        assertTrue(duplicates.isEmpty(), "Expected no duplicates for empty repository");
+    /**
+     * Helper method to create Book instances for testing
+     * 
+     * @param id Book identifier
+     * @param title Book title
+     * @param author Book author
+     * @return Populated Book instance
+     */
+    private Book createBook(String id, String title, String author) {
+        Book book = new Book();
+        book.setId(id);
+        book.setTitle(title);
+        book.setAuthors(author != null ? List.of(author) : Collections.emptyList());
+        book.setDescription("Test desc");
+        book.setCoverImageUrl("http://example.com/cover.jpg");
+        // Add other necessary fields if any
+        return book;
+    }
+    
+    /**
+     * Helper method to create CachedBook instances for testing
+     * 
+     * @param id Database ID for CachedBook
+     * @param title Book title
+     * @param author Book author
+     * @param googleBooksId Google Books API identifier
+     * @return Populated CachedBook instance
+     */
+    private CachedBook createCachedBook(String id, String title, String author, String googleBooksId) {
+        CachedBook cachedBook = new CachedBook();
+        cachedBook.setId(id); // Internal DB ID
+        cachedBook.setGoogleBooksId(googleBooksId);
+        cachedBook.setTitle(title);
+        cachedBook.setAuthors(author != null ? List.of(author) : Collections.emptyList());
+        // Add other necessary fields
+        return cachedBook;
     }
 
+    /**
+     * Tests finding potential duplicates when no duplicates exist
+     */
     @Test
-    void testFindDuplicateBooks_returnsEmptyList_whenOnlyOneBook() {
-        Book single = new Book("ISBN-1", "Single Book");
-        when(bookRepository.findAll()).thenReturn(Collections.singletonList(single));
+    void findPotentialDuplicates_noDuplicates_returnsEmptyList() {
+        Book book = createBook("book1", "Unique Title", "Author U");
+        when(cachedBookRepository.findByTitleIgnoreCaseAndIdNot(eq("Unique Title"), eq("book1"))).thenReturn(Collections.emptyList());
 
-        List<Book> duplicates = duplicateBookService.findDuplicateBooks();
-
-        assertNotNull(duplicates);
-        assertTrue(duplicates.isEmpty(), "Expected no duplicates when only one book exists");
+        List<CachedBook> duplicates = duplicateBookService.findPotentialDuplicates(book, "book1");
+        assertTrue(duplicates.isEmpty());
     }
 
+    /**
+     * Tests finding potential duplicates when one duplicate exists
+     */
     @Test
-    void testFindDuplicateBooks_returnsPair_whenTwoBooksShareIsbn() {
-        Book b1 = new Book("ISBN-2", "Duplicate Title");
-        Book b2 = new Book("ISBN-2", "Duplicate Title");
-        when(bookRepository.findAll()).thenReturn(Arrays.asList(b1, b2));
+    void findPotentialDuplicates_oneDuplicate_returnsListWithOneBook() {
+        Book bookToSearchFor = createBook("book1", "Duplicate Title", "Author D");
+        CachedBook duplicateInDb = createCachedBook("dbId2", "Duplicate Title", "Author D", "googleId2");
 
-        List<Book> duplicates = duplicateBookService.findDuplicateBooks();
+        when(cachedBookRepository.findByTitleIgnoreCaseAndIdNot(eq("Duplicate Title"), eq("book1")))
+            .thenReturn(List.of(duplicateInDb));
 
-        assertEquals(2, duplicates.size(), "Should return both duplicate entries");
-        assertTrue(duplicates.containsAll(Arrays.asList(b1, b2)));
+        List<CachedBook> duplicates = duplicateBookService.findPotentialDuplicates(bookToSearchFor, "book1");
+        assertEquals(1, duplicates.size());
+        assertEquals("dbId2", duplicates.get(0).getId());
+    }
+    
+    /**
+     * Tests finding potential duplicates with same title but different authors
+     */
+    @Test
+    void findPotentialDuplicates_differentAuthors_returnsEmptyList() {
+        Book bookToSearchFor = createBook("book1", "Same Title Different Author", "Author One");
+        CachedBook potentialDuplicateInDb = createCachedBook("dbId2", "Same Title Different Author", "Author Two", "googleId2");
+
+        when(cachedBookRepository.findByTitleIgnoreCaseAndIdNot(eq("Same Title Different Author"), eq("book1")))
+            .thenReturn(List.of(potentialDuplicateInDb));
+
+        List<CachedBook> duplicates = duplicateBookService.findPotentialDuplicates(bookToSearchFor, "book1");
+        assertTrue(duplicates.isEmpty());
     }
 
+    /**
+     * Tests finding multiple duplicate books
+     */
     @Test
-    void testFindDuplicateBooks_returnsAll_whenThreeBooksShareIsbn() {
-        Book b1 = new Book("ISBN-3", "Triplicate Title");
-        Book b2 = new Book("ISBN-3", "Triplicate Title");
-        Book b3 = new Book("ISBN-3", "Triplicate Title");
-        when(bookRepository.findAll()).thenReturn(Arrays.asList(b1, b2, b3));
+    void findPotentialDuplicates_multipleDuplicates_returnsAllMatching() {
+        Book bookToSearchFor = createBook("book1", "Popular Title", "Popular Author");
+        CachedBook dup1InDb = createCachedBook("dbId2", "Popular Title", "Popular Author", "googleId2");
+        CachedBook dup2InDb = createCachedBook("dbId3", "Popular Title", "Popular Author", "googleId3");
+        
+        when(cachedBookRepository.findByTitleIgnoreCaseAndIdNot(eq("Popular Title"), eq("book1")))
+            .thenReturn(Arrays.asList(dup1InDb, dup2InDb));
 
-        List<Book> duplicates = duplicateBookService.findDuplicateBooks();
-
-        assertEquals(3, duplicates.size(), "Should return all three entries with the same ISBN");
-        assertTrue(duplicates.containsAll(Arrays.asList(b1, b2, b3)));
+        List<CachedBook> duplicates = duplicateBookService.findPotentialDuplicates(bookToSearchFor, "book1");
+        assertEquals(2, duplicates.size());
     }
 
+    /**
+     * Tests case-insensitive matching for title and author
+     */
     @Test
-    void testFindDuplicateBooks_returnsAllGroups_whenMultipleGroupsExist() {
-        Book a1 = new Book("ISBN-A", "Title A");
-        Book a2 = new Book("ISBN-A", "Title A");
-        Book b1 = new Book("ISBN-B", "Title B");
-        Book b2 = new Book("ISBN-B", "Title B");
-        Book unique = new Book("ISBN-C", "Unique Title");
-        when(bookRepository.findAll()).thenReturn(Arrays.asList(a1, a2, b1, b2, unique));
+    void findPotentialDuplicates_caseInsensitiveTitleAndAuthorMatch() {
+        Book bookToSearchFor = createBook("book1", "mixedcase title", "mixedcase author");
+        CachedBook duplicateInDb = createCachedBook("dbId2", "MIXEDCASE TITLE", "MIXEDCASE AUTHOR", "googleId2");
+        duplicateInDb.setAuthors(List.of("MIXEDCASE AUTHOR")); // Ensure authors list matches for comparison logic
 
-        List<Book> duplicates = duplicateBookService.findDuplicateBooks();
-
-        assertEquals(4, duplicates.size(), "Should return four entries from two duplicate groups");
-        assertTrue(duplicates.containsAll(Arrays.asList(a1, a2, b1, b2)));
+        when(cachedBookRepository.findByTitleIgnoreCaseAndIdNot(eq("mixedcase title"), eq("book1")))
+            .thenReturn(List.of(duplicateInDb));
+        
+        List<CachedBook> duplicates = duplicateBookService.findPotentialDuplicates(bookToSearchFor, "book1");
+        assertEquals(1, duplicates.size());
+        assertEquals("dbId2", duplicates.get(0).getId());
     }
 
+    /**
+     * Tests handling null book input
+     */
     @Test
-    void testFindDuplicateBooks_throwsRuntimeException_whenRepositoryFails() {
-        when(bookRepository.findAll()).thenThrow(new RuntimeException("DB failure"));
+    void findPotentialDuplicates_nullBook_returnsEmptyList() {
+        List<CachedBook> duplicates = duplicateBookService.findPotentialDuplicates(null, "someId");
+        assertTrue(duplicates.isEmpty());
+    }
 
-        RuntimeException ex = assertThrows(RuntimeException.class, () ->
-            duplicateBookService.findDuplicateBooks()
-        );
-        assertEquals("DB failure", ex.getMessage());
+    /**
+     * Tests handling book with null title
+     */
+    @Test
+    void findPotentialDuplicates_bookWithNullTitle_returnsEmptyList() {
+        Book bookWithNullTitle = createBook("book1", null, "Author");
+        List<CachedBook> duplicates = duplicateBookService.findPotentialDuplicates(bookWithNullTitle, "book1");
+        assertTrue(duplicates.isEmpty());
+    }
+
+    /**
+     * Tests handling book with null authors list
+     */
+    @Test
+    void findPotentialDuplicates_bookWithNullAuthors_returnsEmptyList() {
+        Book bookWithNullAuthors = createBook("book1", "A Title", null);
+        bookWithNullAuthors.setAuthors(null); // Explicitly set to null
+        List<CachedBook> duplicates = duplicateBookService.findPotentialDuplicates(bookWithNullAuthors, "book1");
+        assertTrue(duplicates.isEmpty());
+    }
+
+    /**
+     * Tests handling book with empty authors list
+     */
+    @Test
+    void findPotentialDuplicates_bookWithEmptyAuthors_returnsEmptyList() {
+        Book bookWithEmptyAuthors = createBook("book1", "A Title", null);
+        bookWithEmptyAuthors.setAuthors(Collections.emptyList()); // Explicitly set to empty list
+        List<CachedBook> duplicates = duplicateBookService.findPotentialDuplicates(bookWithEmptyAuthors, "book1");
+        assertTrue(duplicates.isEmpty());
     }
 }
